--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ file(GLOB_RECURSE SRC_FILES "src/*.cpp")
 add_library(Galvanizer STATIC ${SRC_FILES})
 
 target_compile_definitions(Galvanizer PUBLIC GALVANIZER_STATIC)
-target_include_directories(Galvanizer PRIVATE "include")
+target_include_directories(Galvanizer PRIVATE "include" "vendor/glfw/include")
 target_compile_options(Galvanizer PRIVATE -Wall -Werror)
 
 # 1 - Error
@@ -16,6 +16,20 @@ target_compile_options(Galvanizer PRIVATE -Wall -Werror)
 # 3 - Info
 # 4 - Trace
 target_compile_definitions(Galvanizer PRIVATE DEBUG_LOG_LVL=4)
+
+
+#Build glad & glfw libraries
+add_subdirectory("vendor/glad")
+
+option(GLFW_BUILD_DOCS OFF FORCE)
+option(GLFW_BUILD_TESTS OFF FORCE)
+option(GLFW_BUILD_EXAMPLES OFF FORCE)
+add_subdirectory("vendor/glfw")
+
+
+#Link all of the libraries
+target_link_libraries(Galvanizer PRIVATE glad glfw)
+
 
 # Remove this set
 set(GALVANIZER_BUILD_TESTS TRUE)
