Add glfw-atlas-gen library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
-cmake_minimum_required(VERSION 3.22)
+cmake_minimum_required(VERSION 3.30)
+set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
+cmake_policy(SET CMP0077 NEW)
+
+option(GALVANIZER_BUILD_TESTS "Build Galvanizer test applications" ON)
 set(CMAKE_CXX_STANDARD 20)
 
 project(GalvanizerProj VERSION 0.0.0)
@@ -32,24 +36,27 @@ target_compile_options(Galvanizer PRIVATE -Wall -Werror)
 
 
 # Build glad
-add_subdirectory("vendor/glad")
+add_subdirectory("vendor/glad" SYSTEM)
 
 #Build stb
-add_subdirectory("vendor/stb")
+add_subdirectory("vendor/stb" SYSTEM)
 
 #Build glfw
-option(GLFW_BUILD_DOCS OFF FORCE)
-option(GLFW_BUILD_TESTS OFF FORCE)
-option(GLFW_BUILD_EXAMPLES OFF FORCE)
-add_subdirectory("vendor/glfw")
+set(GLFW_BUILD_DOCS OFF)
+set(GLFW_BUILD_TESTS OFF)
+set(GLFW_BUILD_EXAMPLES OFF)
+add_subdirectory("vendor/glfw" SYSTEM)
 
+#Build msdf-atlas-gen
+set(MSDF_ATLAS_BUILD_STANDALONE OFF)
+set(MSDF_ATLAS_USE_VCPKG OFF)
+set(MSDF_ATLAS_USE_SKIA OFF)
+add_subdirectory("vendor/msdf-atlas-gen" SYSTEM)
 
 # Link all of the libraries
-target_link_libraries(Galvanizer PRIVATE glad glfw stb)
+target_link_libraries(Galvanizer PRIVATE glad glfw stb msdf-atlas-gen)
 
-
-# Remove this set
-set(GALVANIZER_BUILD_TESTS TRUE)
-if (${GALVANIZER_BUILD_TESTS})
+if (GALVANIZER_BUILD_TESTS)
+    message("Galvanizer tests included!")
     add_subdirectory("tests")
 endif ()
