--- a/tests/SimpleWindow/CMakeLists.txt
+++ b/tests/SimpleWindow/CMakeLists.txt
@@ -1,12 +1,12 @@
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.30)
 
 file(GLOB_RECURSE SRC_FILES "src/*.cpp")
 add_executable(SimpleWindow ${SRC_FILES})
 
 
 # SimpleWindow
-target_include_directories(SimpleWindow PRIVATE "include")
+target_include_directories(SimpleWindow PRIVATE "include" "../../vendor/msdf-atlas-gen")
 
 # Galvanizer
-target_link_libraries(SimpleWindow PRIVATE Galvanizer)
+target_link_libraries(SimpleWindow PRIVATE Galvanizer msdf-atlas-gen)
 target_include_directories(SimpleWindow PRIVATE "../../include")
